--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-web-resource": "react-scripts build && gulp build-web-resource",
+    "gulp": "gulp build-web-resource",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint-ts": "eslint . --ext .ts --ext .tsx",
@@ -53,6 +55,7 @@
     "css-modules": "^0.3.0",
     "eslint": "^8.12.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gulp": "^4.0.2",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0"
   }
