--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "build-crm-module": "react-scripts build && gulp build-crm-module",
+    "build:dev": "node build-dev",
     "gulp": "gulp build-crm-module",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -56,6 +57,7 @@
     "eslint": "^8.12.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gulp": "^4.0.2",
+    "rewire": "^6.0.0",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0"
   }
