--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-crm-module": "react-scripts build && gulp build-crm-module",
     "build:dev": "node build-dev",
+    "build-crm-module": "react-scripts build && gulp build-crm-module",
+    "build-crm-module:dev": "npm run build:dev && gulp build-crm-module-dev",
     "gulp": "gulp build-crm-module",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -57,6 +58,7 @@
     "eslint": "^8.12.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gulp": "^4.0.2",
+    "js-beautify": "^1.14.3",
     "rewire": "^6.0.0",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0"
